finishing html studies

--- a/Fase 1/Aquecimento/01-HTML/index.html
+++ b/Fase 1/Aquecimento/01-HTML/index.html
@@ -11,5 +11,46 @@
           <div> <a href="contato.html">Contato</a> </div>
           <div> <a href="fiquepordentro.html">Fique por dentro</a> </div>
       </div>  
+
+      <div id="imagemGeral">
+        <img src="img/loja-virtual.png">
+      </div>
+      
+      <div id="tituloDestaque">
+        <h2>Nossos Destaques</h2>
+      </div>
+
+      <div id="produtos">
+        <div class="produtoDestaque">
+          <img src="img/gift.jpg" alt="">
+          <h3>R$30,00</h3>
+          <p>Descrição do produto</p>
+        </div>
+
+        <div class="produtoDestaque">
+          <img src="img/gift.jpg" alt="">
+          <h3>R$50,00</h3>
+          <p>Descrição do produto</p>
+        </div>
+
+        <div class="produtoDestaque">
+          <img src="img/gift.jpg" alt="">
+          <h3>R$20,00</h3>
+          <p>Descrição do produto</p>
+        </div>
+      </div>
+
+      <div id="rodape">
+        <div id="redessociais">
+          <img src="img/whatsapp.png"> +55 83 99994-3432 <br/>
+          <img src="img/insta.png"> @minhalojinha
+        </div>
+        <div id="gmail">
+          <h3>Receba nossas novidades</h3>
+          <input type="email" id="inputEmail" placeholder="Digite seu email">
+          <button>Enviar</button>
+        </div>
+      </div>
+
     </body>
 </head>
