--- a/Fase 1/Aquecimento/01-HTML/teste.html
+++ b/Fase 1/Aquecimento/01-HTML/teste.html
@@ -21,7 +21,7 @@
       </ul>
 
       <h3>Itens para comprar</h3>
-      <img src="produto.png" width="15%">
+      <img src="img/produto.png" width="15%">
       <table border="1" width="100%">
           <tr>
             <th>Item</th>
