--- a/Fase 1/Aquecimento/02-CSS/index.html
+++ b/Fase 1/Aquecimento/02-CSS/index.html
@@ -7,6 +7,9 @@
     <script src="https://kit.fontawesome.com/e007bd918e.js" crossorigin="anonymous"></script>
     <title>Meu Portfólio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
