--- a/Fase 1/Aquecimento/02-CSS/index.html
+++ b/Fase 1/Aquecimento/02-CSS/index.html
@@ -46,6 +46,21 @@
                    ser um Software engineer futuramente!
                 </p>
             </div>
+            <h2>Linguagens de Programação</h2>
+            <div class="flex">
+                <div class="python">
+                    <img src="img/python.png">
+                    <p>Conhecimento Avançado</p>
+                </div>
+                <div>
+                    <img src="img/c++.png">
+                    <p>Conhecimento Intermediario</p>
+                </div>
+                <div>
+                    <img src="img/sql.png">
+                    <p>Conhecimento Intermediario</p>
+                </div>
+            </div>
 
             <div class="form">
                 <div>
